After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 793922 - google: Fix compile-time warning
google: Fix compile-time warning
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: google backend
unspecified
Other All
: Normal normal
: ---
Assigned To: Debarshi Ray
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2018-02-28 15:32 UTC by Bastien Nocera
Modified: 2018-02-28 17:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
google: Fix compile-time warning (1.76 KB, patch)
2018-02-28 15:32 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2018-02-28 15:32:49 UTC
.
Comment 1 Bastien Nocera 2018-02-28 15:32:54 UTC
Created attachment 369100 [details] [review]
google: Fix compile-time warning

Move the variable into the block where it's used, behind a compile-time
version check.

gvfs/daemon/gvfsbackendgoogle.c: In function ‘g_vfs_backend_google_query_fs_info’:
gvfs/daemon/gvfsbackendgoogle.c:2041:22: warning: unused variable ‘self’ [-Wunused-variable]
   GVfsBackendGoogle *self = G_VFS_BACKEND_GOOGLE (_self);
                      ^~~~
Comment 2 Ondrej Holy 2018-02-28 16:41:54 UTC
Review of attachment 369100 [details] [review]:

Sure, thanks!