google: Fix compile-time warning

Move the variable into the block where it's used, behind a compile-time
version check.

gvfs/daemon/gvfsbackendgoogle.c: In function ‘g_vfs_backend_google_query_fs_info’:
gvfs/daemon/gvfsbackendgoogle.c:2041:22: warning: unused variable ‘self’ [-Wunused-variable]
   GVfsBackendGoogle *self = G_VFS_BACKEND_GOOGLE (_self);
                      ^~~~

https://bugzilla.gnome.org/show_bug.cgi?id=793922